--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
     <title>Login</title>
 </head>
 <body>
-    <link rel="stylesheet" href="{{url_for('static',filename='/design.css')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename='/designe/design.css')}}">
     <div class="login_div">
         {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %} 
